--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an awesome ...</h1>
+            <h1>How to Prepare an AWESOME Interview ...</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 30 minutes<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+            <p><b>Assembly Time:</b> 30-60 minutes<br>
+              <b>Awesome rating:</b> 1000% awesome</p>
             <hr>
 
             <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
