--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src=<blockquote class="imgur-embed-pub" lang="en" data-id="a/O1Rd0B7" data-context="false" ><a href="//imgur.com/a/O1Rd0B7"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>>            
+      <img src="Monogram.Final.eps LD #4.png" alt="LD monogram">            
       <h1>Lindsey Deanda's Guide to Conducting an Interview</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
