--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="Monogram.Final.eps LD #4.png" alt="LD monogram">            
+      <img src="images/Monogram.Final.eps%20LD%20%234.png" alt="LD monogram" width="200">            
       <h1>Lindsey Deanda's Guide to Conducting an Interview</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
