--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ IN THIS CHALLENGE, YOU WILL LEARN ABOUT:
 
 
     <title>Firstname Lastname's Instruction Tips</title>
-  <script src=<blockquote class="imgur-embed-pub" lang="en" data-id="a/8G2b9G5" data-context="false" ><a href="//imgur.com/a/8G2b9G5"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>>
+  <script src="https://thimble.mozilla.org/resources/remix/index.js "type="text/javascript"></script>
 </head>
   <body>
 
