--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src=<blockquote class="imgur-embed-pub" lang="en" data-id="ekBtgcj"><a href="https://imgur.com/ekBtgcj">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script" width="100" aligns="right height="100" alt="LD_monogram">
+      <img src=<>
         
               <h1>Lindsey Deanda's Guide to Conducting an Interview</h1>
                <h3>An Instruction Challenge for JOUR108</h3>
