--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@ Add your introduction to your step-by-step-guide, including a title, time requir
             <hr>
             <p><b>Assembly Time:</b> 30-60 minutes<br>
               <b>Awesome rating:</b> 1000% awesome</p>
-              <b>Necessary scale:</b> 10/10</p>
+               <b>Necessary scale:</b> 10/10</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Are you nervous about your first interview? Do you need help on conducting an interview as a new journalist? Follow these steps and you'll be a top tier professional!/p>
 
           </div>
 
