--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@ Add your introduction to your step-by-step-guide, including a title, time requir
             <hr>
             <p><b>Assembly Time:</b> 30-60 minutes<br>
               <b>Awesome rating:</b> 1000% awesome</p>
-               <b>Necessary scale:</b> 10/10</p>
             <hr>
 
-            <p>Are you nervous about your first interview? Do you need help on conducting an interview as a new journalist? Follow these steps and you'll be a top tier professional!/p>
+            <p>Are you nervous about your first interview? Do you need help on conducting an interview as a new journalist? Follow these steps and you'll be a top tier professional!</p>
 
           </div>
 
