--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>Computer or laptop</li>
+              <li>Paper</li>
+              <li>Pen</li>
+              <li>A quiet setting</li>
+              <li>Recording or video device</li>
+              <li>Confidence</li>
             </ul>
           </aside>
         </div>
@@ -117,8 +117,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Define your purpose</h3>
+              <p>This will have an impact on whom you interview, how you will conduct the interview, and how you will write the story</p> 
             </div>
           </li>
 
