--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Define your purpose</h3>
-              <p>This will have an impact on whom you interview, how you will conduct the interview, and how you will write the story</p> 
+              <h3>Define your purpose.</h3>
+              <p>This will have an impact on whom you interview, how you will conduct the interview, and how you will write the story.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Research your interview subject(s) and draw up questions.</h3>
+              <p>In order to conduct an effective interview that can in turn become a successful interview story, you need to delve into the history and background of your subject(s) and the topic at the core of your essay. You can use this information to determine the best questions to ask in the interview.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -141,8 +141,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Plan an outline of the essay.</h3>
+              <p>The outline will depend largely on the essay format you are following, but a strong introduction, which clearly identifies your subject and the goals and focus of your interview, is always important.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -153,8 +153,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Arrange the interview(s).</h3>
+              <p>You'll need to contact the interviewee (or their representative) to arrange a time and place to conduct the interview. You'll also need permission to record the interview with either audio or video equipment, or to take photographs. Be sure the person you contact knows who you are and why you want to interview them.You'll need to contact the interviewee (or their representative) to arrange a time and place to conduct the interview. You'll also need permission to record the interview with either audio or video equipment, or to take photographs. Be sure the person you contact knows who you are and why you want to interview them.You may want to get the interviewee's consent to use their comments in your essay in writing, as well as permission to record those comments during the interview. By law, if you are recording an interview conducted over the phone, you must obtain written permission.</p> 
             </div>
           </li>
 
@@ -165,6 +165,12 @@ with a paragraph to create a photo with a caption.
               <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
             </div>
           </li>
+
+            <!-- A new step -->
+          <li>
+            <div class="content">
+              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
+              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
 
 
 
