--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Arrange the interview(s).</h3>
-              <p>You'll need to contact the interviewee (or their representative) to arrange a time and place to conduct the interview. You'll also need permission to record the interview with either audio or video equipment, or to take photographs. Be sure the person you contact knows who you are and why you want to interview them.You'll need to contact the interviewee (or their representative) to arrange a time and place to conduct the interview. You'll also need permission to record the interview with either audio or video equipment, or to take photographs. Be sure the person you contact knows who you are and why you want to interview them.You may want to get the interviewee's consent to use their comments in your essay in writing, as well as permission to record those comments during the interview. By law, if you are recording an interview conducted over the phone, you must obtain written permission.</p> 
+              <p>You'll need to contact the interviewee to arrange a time and place to conduct the interview. You'll also need permission to record the interview with either audio or video equipment, or to take photographs. Be sure the person you contact knows who you are and why you want to interview them. You'll also need permission to record the interview with either audio or video equipment, or to take photographs.</p> 
             </div>
           </li>
 
