--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to Prepare an AWESOME Interview ...</h1>
+            <h1>How to Prep for an Interview Like a Pro Journalist...</h1>
 
             <hr>
             <p><b>Assembly Time:</b> 30-60 minutes<br>
