--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to Prep for an Interview Like a Pro Journalist...</h1>
+            <h1>How to Prepare for an Interview Like a Pro Journalist...</h1>
 
             <hr>
             <p><b>Assembly Time:</b> 30-60 minutes<br>
@@ -161,8 +161,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Conduct the interview(s)</h3>
+              <p>Be patient and respectful as you ask your questions and wait for responses. Give the interviewee time to reflect, and you will likely be rewarded with more insightful answers. A few deeper responses are usually better than many superficial ones. Always end the interview by thanking the person.</p> 
             </div>
           </li>
 
