--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Conduct the interview(s)</h3>
-              <p>Be patient and respectful as you ask your questions and wait for responses. Give the interviewee time to reflect, and you will likely be rewarded with more insightful answers. A few deeper responses are usually better than many superficial ones. Always end the interview by thanking the person.</p> 
+              <p>Be patient and respectful as you ask your questions and wait for responses. Give the interviewee time to reflect, and you will likely be rewarded with more insightful answers. A few deeper responses are usually better than many superficial ones. Always end the interview by thanking the person. Be confident and goodluck!</p> 
             </div>
           </li>
 
