Change font color and family in index.html
Updated font color and font family in the CSS styles.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Customise the visual style and appearance of your guide.
         width:100%;
         font-weight:normal;
         font-family:Courier new, sans-serif;         /* CHANGE THE FONT HERE */
-        color:#555;         /* CHANGE THE FONT COLOR HERE */
+        color:#000000;         /* CHANGE THE FONT COLOR HERE */
       }  
 
       /* PAGE LAYOUT */
@@ -249,7 +249,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#1593A1;         /* CHANGE THE LINK COLOR HERE */
+        color:#2b2f29;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
@@ -258,7 +258,7 @@ Customise the visual style and appearance of your guide.
         margin:0;
         width:100%;
         font-weight:bold;
-        font-family:Arial, sans-serif;          /* CHANGE THE HEADER FONT HERE */
+        font-family:Times New Roman, sans-serif;          /* CHANGE THE HEADER FONT HERE */
       }
 
       h2, h3, h4 {
