--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ Customise the visual style and appearance of your guide.
       hr {
         border: 0; 
         height: 0; 
-        border-top: 1px solid #D3E3E8; 
+        border-top: 3px solid #d5d7d4; 
       }
 
 
