Update YouTube iframe source in index.html

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ with a paragraph to create a photo with a caption.
               <p>The outline will depend largely on the essay format you are following, but a strong introduction, which clearly identifies your subject and the goals and focus of your interview, is always important.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/sQ3z0HYww_s?si=G_VauaYecxv2xDuu" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
