--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <a href="https://www.flickr.com/photos/chezc/6812269604" title="The media, on Flickr"><img alt="the media" height="%" width="%" src="https://live.staticflickr.com/4842/32042421908_0b5a794618_c.jpg" ></a>
+              <p class="caption"> Thousands of people marched to the offices of the Hong Kong city government on Saturday, demanding that outgoing chief executive Donald Tsang stand trial following allegations of ethics violations in his dealings with businessmen..</p>
             </div>
           </li>
 
