Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://www.flickr.com/photos/chezc/6812269604" title="The media, on Flickr"><img alt="the media" height="%" width="%" src="https://live.staticflickr.com/4842/32042421908_0b5a794618_c.jpg" ></a>
+              <a href="https://www.flickr.com/photos/chezc/6812269604" title="The media, on Flickr"><img alt="the media" height="%" width="%" src=""https://live.staticflickr.com/2423/3821599070_cbd59ef373_c.jpg" ></a>
               <p class="caption"> Thousands of people marched to the offices of the Hong Kong city government on Saturday, demanding that outgoing chief executive Donald Tsang stand trial following allegations of ethics violations in his dealings with businessmen..</p>
             </div>
           </li>
