--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://flic.kr/p/6PGGg9" title="The media, on Flickr"><img alt="the media" height="%" width="%" src=""https://live.staticflickr.com/2423/3821599070_cbd59ef373_c.jpg" ></a>
-              <p class="caption"> Thousands of people marched to the offices of the Hong Kong city government on Saturday, demanding that outgoing chief executive Donald Tsang stand trial following allegations of ethics violations in his dealings with businessmen..</p>
+              <a href="https://flic.kr/p/6PGGg9" title="interview 2, on Flickr"><img alt="interview2" height="%" width="%" src=""https://live.staticflickr.com/2423/3821599070_cbd59ef373_c.jpg" ></a>
+              <p class="caption">cynthia izaguirre interviews Larry Young, CEO of Dr Pepper Snapple Group</p>
             </div>
           </li>
 
@@ -182,7 +182,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Write-an-Interview-Essay" title="How to Write an Interview Essay -wikiHow">WikiHow</a></p>
-      <p>Images are by <a href="https://flic.kr/p/bnYEqd" title="the media™ the media in Action by Cheryl Chan, on Flickr">Cheyrl Chan from Flickr</a></p>
+      <p>Images are by <a href="https://flic.kr/p/6PGGg9" title="Interview 2™ the media in Action by Amberley Johnson, on Flickr">Amberley Johnson from Flickr</a></p>
     </footer>
 
     <!--
