Update Flickr photo link and image source
photo

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://www.flickr.com/photos/amberlina/3821599070/" title="interview 2, on Flickr"><img alt="interview2" height="%" width="%" src=""https://live.staticflickr.com/2423/3821599070_cbd59ef373_c.jpg" ></a>
+              <a href="https://www.flickr.com/photos/147501246@N07/32042421908/" title="interview 2, on Flickr"><img alt="interview2" height="%" width="%" src=""https://live.staticflickr.com/4842/32042421908_0b5a794618_c.jpg" ></a>
               <p class="caption">cynthia izaguirre interviews Larry Young, CEO of Dr Pepper Snapple Group</p>
             </div>
           </li>
