Update photo and caption for Secretary Rubio interview

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://www.flickr.com/photos/147501246@N07/32042421908/" title="interview 2, on Flickr"><img alt="interview2" height="%" width="%" src=""https://live.staticflickr.com/4842/32042421908_0b5a794618_c.jpg" ></a>
-              <p class="caption">cynthia izaguirre interviews Larry Young, CEO of Dr Pepper Snapple Group</p>
+              <a href="https://www.flickr.com/photos/statephotos/54350404172/" title="Secretary Rubio Interviewed by Fox News, on Flickr"><img alt="Secretary Rubio Interviewed by Fox News" height="537" width="800" src=""https://live.staticflickr.com/65535/54350404172_1aab76b8bd_c.jpg"></a>
+              <p class="caption">Secretary Marco Rubio is interviewed by Fox News' Brian Kilmeade at the Department of State in Washington, D.C., February 25, 2025. (Official State Department photo by Freddie Everett)</p>
             </div>
           </li>
 
@@ -182,7 +182,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Write-an-Interview-Essay" title="How to Write an Interview Essay -wikiHow">WikiHow</a></p>
-      <p>Images are by <a href="https://flic.kr/p/6PGGg9" title="Interview 2™ the media in Action by Amberley Johnson, on Flickr">Amberley Johnson from Flickr</a></p>
+      <p>Images are by <a href="https://flic.kr/p/2qNL2C1" title="Secretary Rubio Interviewed by Fox News" the media in Action by U.S. Department of State, on Flickr">U.S. Department of State from Flickr</a></p>
     </footer>
 
     <!--
