--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://www.flickr.com/photos/statephotos/54350404172/" title="Secretary Rubio Interviewed by Fox News, on Flickr"><img alt="Secretary Rubio Interviewed by Fox News" height="%" width="%" src=""https://live.staticflickr.com/65535/54350404172_1aab76b8bd_c.jpg"></a>
+              <a href="https://www.flickr.com/photos/statephotos/54350404172/" title="Secretary Rubio Interviewed by Fox News, on Flickr"><img alt="Secretary Rubio Interviewed by Fox News" height="%" width="%" src="https://live.staticflickr.com/65535/54350404172_1aab76b8bd_c.jpg" ></a>
               <p class="caption">Secretary Marco Rubio is interviewed by Fox News' Brian Kilmeade at the Department of State in Washington, D.C., February 25, 2025. (Official State Department photo by Freddie Everett)</p>
             </div>
           </li>
