Fix img tag in header of index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src=<"imgur-embed-pub" lang="en" data-id="a/6Loel2Z"  ><a href="//imgur.com/a/6Loel2Z">h</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script"right height="100" alt="LD_monogram">
+      <img src=<"right height="100" alt="LD_monogram">
         
               <h1>Lindsey Deanda's Guide to Conducting an Interview</h1>
                <h3>An Instruction Challenge for JOUR108</h3>
