Update header image source in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src=<"right height="100" alt="LD_monogram">
+      <img src=<"https://live.staticflickr.com/65535/54953463569_649ea70af5_c.jpg" width="100" align=right height="100" alt="LD_monogram">
         
               <h1>Lindsey Deanda's Guide to Conducting an Interview</h1>
                <h3>An Instruction Challenge for JOUR108</h3>
