Fix image tag syntax in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src=“https://imgur.com/gallery/png-O1Rd0B7#detgHHT.png<https://imgur.com/gallery/png-O1Rd0B7#detgHHT.png>">
+      <img src=“https://imgur.com/gallery/png-O1Rd0B7#detgHHT.png<https://imgur.com/gallery/png-O1Rd0B7#detgHHT.png>
         
               <h1>Lindsey Deanda's Guide to Conducting an Interview</h1>
                <h3>An Instruction Challenge for JOUR108</h3>
