Fix img tag syntax in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src=<![LD monogram](/least-github-pages/assets/monogram 6.png>
+      <img src=<"![LD monogram](/least-github-pages/assets/monogram 6.png">
         
               <h1>Lindsey Deanda's Guide to Conducting an Interview</h1>
                <h3>An Instruction Challenge for JOUR108</h3>
