--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://i.imgur.com/5wurLhq.png">
+      <img src="https://i.imgur.com/5wurLhq.png" width="100" align=right height="100" alt="LD_monogram">
         
               <h1>Lindsey Deanda's Guide to Conducting an Interview</h1>
                <h3>An Instruction Challenge for JOUR108</h3>
